--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ h1 {
     box-sizing: border-box;
 }
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
 }
-h2, h3 {
-    color:aqua;
+h2,h3 {
+    color: #00a2c6;
 }
 footer {
     padding: 10px;
@@ -19,7 +19,7 @@ footer {
     background-color: rgb(28, 236, 236);
 }
 nav a {
-    font: size 10px;
+    font: size 18px;
     font-weight: 400;
     text-decoration: none;
     color: white;
@@ -42,7 +42,7 @@ nav a:hover {
 .card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
-    padding: 20;
+    padding: 20px;
 }
 .jumbotron{
     font-size: 20px;
@@ -84,7 +84,7 @@ header{
 }
 @media screen and (max-width: 1200px){
     main{
-        flex-direction: column nowrap;
+        flex-flow: column nowrap;
     }
     main aside {
         align-self: center;
@@ -92,7 +92,7 @@ header{
 }
 @media screen and (max-width: 768px){
     nav ul {
-        align-self: stretch;
+        justify-content: center;
 }
 main aside{
     align-self: stretch;
